--- a/aboutus.html
+++ b/aboutus.html
@@ -87,36 +87,36 @@
   <!-- BANNER IMAGE-->
 
   <div class="banner">
-    <img class="banner-image" src="./images/homepage.png">
+    <img class="banner-image" src="./images/aboutus.png">
   </div>
 
   <!-- Page Content -->
-  <div class="container w3-padding-64">
+  <div class=" w3-padding-64">
     <!--<div class = "headerstyle container w3-center tagline"> 
       <h1 style="color:#d9d9d9">Authentic  Genuine  DownToEarth</h1>
     </div> -->
 
 
     <!-- Row 1 -->
-    <div class="w3-cell-row w3-mobile">
+    <div class=" w3-cell-row w3-mobile">
 
       <!-- column 1 -->
-      <div class="w3-container w3-cell w3-mobile" style="padding-left:10px; padding-right:10px">
+      <div class="w3-container w3-cell w3-mobile" style="padding-left:0px; padding-right:0px">
 
-        <div class="w3-container w3-mobile" style = "padding-bottom: 20px">
+        <div class="w3-container w3-mobile desktop-style" style = "padding-bottom: 20px">
       <h1 class="w3-center title-padding" style="padding-bottom:50px">What is Tri Delta?</h1>
 
          <p class= "subtitle-padding text-color" style="padding-bottom:20px">A home away from home...</hp>
-         <p class="paragraph-style">Tri Delta is represented in hundreds of collegiate chapters throughout the US. Our Gamma Lambda chapter at UCSD is founded on a platform of <b>leadership, perpetual bonds of friendship, and a womanly character</b>. It is best described by its sisters as a <b>"home away from home"</b>, a comfortable place where love, respect, and support can always be found. </p>
+         <p class="paragraph-style">Tri Delta is represented in hundreds of collegiate chapters throughout the US. Our Gamma Lambda chapter at UCSD is founded on a platform of <b>leadership</b>, <b>perpetual bonds of friendship</b>, and <b>a womanly character</b>. It is best described by its sisters as a <b>"home away from home"</b>, a comfortable place where love, respect, and support can always be found. </p>
 
        </div>
      </div>
 
      <!-- column 2 -->
-     <div class="w3-cell w3-mobile w3-hover-shadow" style="width:30%;">
+     <div class="w3-cell w3-mobile" style="width:30%;">
 
-        <img src="images/about-us/our-story.jpg" style = "width:100%" alt="about-us-1">
-        <p class="w3-panel" style="line-height:1.6em">"Our individual sisters are never defined by our chapter; rather, it is the quality and diversity of our sisters that define us."</p>
+        <img src="images/about-us/our-story.jpg" class=" w3-hover-shadow" style = "width:100%" alt="about-us-1">
+        <p class=" w3-container paragraph-style" style="padding-top: 10px">"Our individual sisters are never defined by our chapter; rather, it is the quality and diversity of our sisters that define us."</p>
     </div>
   </div>
 
@@ -124,18 +124,18 @@
     <div class="w3-cell-row w3-padding-48 w3-mobile">
 
       <!-- column 1 -->
-      <div class="w3-container w3-cell w3-mobile" style="padding-left:10px; padding-right:10px">
-        <div class="w3-container w3-mobile" style = "padding-bottom: 20px">
+      <div class=" w3-container w3-cell w3-mobile" style="padding-left:0px; padding-right:0px">
+        <div class="w3-container w3-mobile desktop-style" style = "padding-bottom: 20px">
           <h1 class="w3-center title-padding" style="padding-bottom:50px">Our Diverse Group</h1>
-         <p class="paragraph-style">Our chapter contains women involved in all majors, various campus organizations, as well as representatives of UCSD's Student Councils and Associated Students. We have ladies pursuing careers as future doctors, lawyers, teachers, environmental and social advocates, conservationists, political leaders, and so much more. With an Officer's Council of over 20 sisters, our chapter provides many opportunities for leadership positions and involvement, helping our women grow and become strong leaders in their workplace and communities. </p>
+         <p class="paragraph-style ">Our chapter contains women involved in all majors, various campus organizations, as well as representatives of UCSD's Student Councils and Associated Students. We have ladies pursuing careers as future doctors, lawyers, teachers, environmental and social advocates, conservationists, political leaders, and so much more. With an Officer's Council of over 20 sisters, our chapter provides many opportunities for leadership positions and involvement, helping our women grow and become strong leaders in their workplace and communities. </p>
        </div>
      </div>
 
      <!-- column 2 -->
      <div class="w3-cell w3-mobile w3-center" style = "width:30%">
-        <img src="images/about-us/about-us-4.jpg" style = "width:100%" alt="about-us-2">
-        <div style= "padding-bottom:5px;"></div>
-        <img src="images/about-us/about-us-5.jpg"  style = "width:100%" alt="about-us-3">
+        <img src="images/about-us/about-us-4.jpg" class=" w3-hover-shadow" style = "width:100%" alt="about-us-2">
+        <div style= "padding-bottom:10px;"></div>
+        <img src="images/about-us/about-us-5.jpg"  class=" w3-hover-shadow" style = "width:100%" alt="about-us-3">
     </div>
   </div>
 
@@ -143,12 +143,17 @@
     <div class="w3-cell-row w3-padding-48 w3-mobile">
 
       <!-- column 1 -->
+        <div class=" w3-container w3-mobile">
+
           <h1 class="w3-center title-padding" style="padding-bottom:50px"> History of Tri Delta</h1>
+       </div>  
+       <div class="w3-mobile"> 
           <img src="images/about-us/history.jpg" style = "width:100% " alt="about-us-2">
-
-         <p class="paragraph-style" style= "padding-top:20px">Tri Delta was founded by women for women. Ours is a remarkable story, and Tri Delta is proud to share a sisterhood created by brave, bold and kind women who were looking to be themselves and belong to something bigger – something distinctive, something dynamic and something worthy of the best in them. <br> Although there were three women's groups represented at Boston University in 1888, seniors Sarah Ida Shaw and Eleanor Dorcas Pond saw a need for a different organization that would "be kind alike to all and think more of the girl's inner self and character than of her personal appearance."</p>
+      </div>
+      <div class = "w3-container w3-mobile">
+         <p class="paragraph-style" style= "padding-top:20px">Tri Delta was founded by women for women. Ours is a remarkable story, and Tri Delta is proud to share a sisterhood created by brave, bold and kind women who were looking to be themselves and belong to something bigger – something distinctive, something dynamic and something worthy of the best in them. Although there were three women's groups represented at Boston University in 1888, seniors Sarah Ida Shaw and Eleanor Dorcas Pond saw a need for a different organization that would <b>"be kind alike to all and think more of the girl's inner self and character than of her personal appearance."</b></p>
      </div>
-
+   </div>
     <div class="w3-center w3-mobile">
       <h1 class="w3-center title-padding" style="padding-bottom:80px"> Symbols & Emblems </h1> 
 
@@ -162,23 +167,25 @@
           <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
       </div>
       <div class="w3-center">
-        <img src="images/aboutlogo.png" class = "w3-center" style="width:30%; text-align:center">
-          The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
+        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%; text-align:center padding-left: 60px">
+          <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
       </div>
       <div class="w3-center">
-        <img src="images/pansy.png" class = "w3-center" style="width:100%">
-        The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
+        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%">
+        <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
       </div>
       <div class="w3-center">
-        <img src="images/logo.png" class = "w3-center" style="width:30%; text-align:center">
-        The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
+        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%; text-align:center">
+        <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
       </div>
       <div class="w3-center">
-        <img src="images/pansy.png" class = "w3-center" style="width:30%; text-align:center">
-        The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.
+        <img src="images/about-us/crest.png" class = "w3-center" style="width:100%; text-align:center">
+        <p>The pansy is Tri Delta's flower. It is also a symbol of alumnae membership and the third step in the lifetime development of Delta Delta Delta's members.</p>
       </div>
     </div>
   </div>
+    </div>
+
 </div>
 
 
@@ -209,43 +216,69 @@ function showDivs(n) {
 
 
 <!--FOOTER START -->   
-<footer class="py-3" style="background-color:#FEA17E">
-  <div class="container">
+  <footer class="py-3 foot" style="background-color:#FFBFB7">
+   <div class="container">
     <div class="row">
 
-      <div class="col-sm-4">
-        <div class="footer-text1">Delta Delta Delta <br> Gamma Lambda <br><br>University of California, San Diego</div>
-      </div>
-
-      <div class="col-sm-4 login">
-        <div class="footer-text">
-          GINsystem Log In
-        </div>
-        <div class="ginsystem-login">
-          <form action="https://app.ginsystem.us/login" method="post" target="blank">
-            <input type="hidden" name="parent_group" value="ddd">
-            <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
-            <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
-            <button type="submit" class="btn btn-default gin-login">Log In</button>
-          </form>
-        </div>
+       <!-- Contacts Us-->
+      <div class="col-sm-4 contact">
+        <div class="contact-us">
+            Contact Us!
+          </div>
+          <div class="vppr-email">
+            ucsd.ddd.vppr@gmail.com
+          </div>
       </div>
 
       <!-- Social Media Icons-->
-      <div class="col-sm-4">
-        <div class="footer-text2">Follow UCSD Tri Delta</div>
-        <div class="social-media">
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-tumblr"></i>
-          <i class="fab fa-pinterest-p"></i>
-          <i class="fab fa-twitter"></i>
+      <div class="social col-sm-4">
+        <div class="footer-text2">
+          Follow UCSD Tri Delta
         </div>
-      </div><!--col-sm-4-->
+        <div class="social-media">
+          <a href="https://www.instagram.com/trideltaucsd/">
+            <i class="fab ho fa-instagram"></i>
+          </a>
+          <a href="https://www.facebook.com/ucsdtridelta/">
+            <i class="fab ho fa-facebook-f"></i>
+          </a>
+          <i class="fab ho fa-pinterest-p"></i>
+          <a href="http://ucsdtridelta.tumblr.com/">
+            <i class="fab ho fa-tumblr"></i>
+          </a>
+          <a href="https://twitter.com/dddatucsd">
+            <i class="fab ho fa-twitter"></i>
+          </a>
+        </div>
+      </div>
 
-    </div><!--row-->
-  </div> <!--container-->
-</footer>
+      <div class="col-sm-4 chapter">
+        <!-- <div class="login">
+          <div class="footer-text">
+            GINsystem Log In
+          </div>
+          <div class="ginsystem-login">
+            <form action="https://app.ginsystem.us/login" method="post" target="blank">
+              <input type="hidden" name="parent_group" value="ddd">
+              <input type="text" name="username" class="username form-control" placeholder="Delta Delta Delta Username" required>
+              <input type="password" name="password" class="password form-control" placeholder="Delta Delta Delta Password" required>
+              <button type="submit" class="btn btn-default gin-login">Log In</button>
+            </form>
+          </div>
+          <div class="forgot">
+            <a href="https://imis.tridelta.org/dddimis/DDDMembers/recover-password" target="_blank">Can't Login?</a>
+          </div>
+        </div>
+      </div> -->
+      Gamma Lambda Chapter 
+      University of California, San Diego
+    </div>
+   </div>
+  <div class="copy-right"><!--row-->
+    &copy; 2018 Delta Delta Delta, Gamma Lambda all rights reserved.​
+  </div>
+  </footer>
+  <!-- FOOTER END -->
 
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
