--- a/FAQ.html
+++ b/FAQ.html
@@ -26,8 +26,28 @@
   font-size:2.25em;
   color: #FFBFB7;
   font-weight: bold;
-  font-family: 'Petit Formal Script', cursive;
-}
+  font-family: 'Petit Formal Script';
+  }
+  .question{
+    text-align:center;
+    font-size:1.2em;
+    font-weight:bold;
+    font-family:Quicksand;
+      color: #FFBFB7;
+
+  }
+  .answer{
+    margin-left:7%;
+    margin-right:7%;
+  }
+  .FAQ{
+    margin-left:2em;
+    margin-right:5em !important; 
+  }
+  .section-margin{
+    margin-left:2em;
+    margin-right:2em !important;
+  }
 </style>
 
 </head>
@@ -53,17 +73,12 @@
                         Our Chapter
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="FAQ.html">F.A.Q.</a>
-                    </li>
-                   <!--  <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About Us</a>
-                    </li> -->
-                    <li class="nav-item dropdown active">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Recruitment
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="aboutus.html">About Us</a>
+                        <a class="dropdown-item" href="leadership.html">Leadership</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
@@ -73,6 +88,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                    <li class ="nav-item active">
+                      <a class = "nav-link" href="events.html">FAQ</a>
                     </li>
                 </ul>
             </div>
@@ -88,9 +106,42 @@
 
     <!-- Page Content -->
 
-<h1 class = "title">
+<p style="font-family:Petit Formal Script;font-size:2.25em;color:#FFBFB7;text-align:center;margin-top:5%">
 Frequently Asked Questions
-</h1>
+</p>
+
+<br>
+
+    <div class="section-margin">
+        <p class="question">Why should I join a sorority?</p><br>
+        <p class="answer">There are many beneficial aspects to sorority life that make it a unique and exciting college experience. While different chapters may have different core values, all Panhellenic sororities offer their members the chance to partake in leadership opportunities, philanthropy, scholarship, personal development, and sisterhood. The great thing about joining Greek life is that all of these opportunities are bundled into one organization!</p>
+
+        <p class="question">What is PHC?</p><br>
+        <p class="answer">The National Panhellenic Conference (NPC), founded in 1902, is an umbrella organization for 26 (inter)national women’s sororities. The University of California, San Diego has 11 of these 26 sororities on their campus, and they are listed below. </p>
+
+        <p class="question">What is IFC?</p><br>
+        <p class="answer">The Interfraternity Council’s (IFC) main purpose is to promote and help facilitate community throughout the whole Greek System through programming and judicial accountability. This includes, but not restricted to, leadership conferences, Interfraternity sports competitions, as well as recognizing individuals and chapters for outstanding scholarship, philanthropic service, risk management practices, and overall chapter management. The Interfraternity Council itself is composed of 3 parts. First, there is the executive board, which is made up of 10 men from all IFC chapters, that act as the leaders and facilitators of the vision, recruitment, judicial procedures, athletics, scholarship, and community of the IFC and its member chapters. Second, there are the Coordinators, which are made up of men from IFC chapters that assist the executive board in the planning and implementation of all the events and resources that the IFC provides to the member chapters. Lastly, there is the President’s Council, which is composed of all the presidents of the 13 member chapters, one delegate for each member chapter, as well as the entire IFC Executive Board. The President’s Council acts as the legislative body of the Interfraternity Council.</p>
+
+        <p class="question">When is formal recruitment?</p><br>
+        <p class="answer">Formal Recruitment typically takes place during Week 1-2 of Fall quarter. If you have any Please look to the Recruitment tab “Description and Attire of Nights”, for more detailed information about each day of recruitment.</p>
+
+        <p class="question">When and where can I register for recruitment?</p><br>
+        <p class="answer">Formal Recruitment for 2016 has concluded but there are still other opportunities available to you to join our community! Please contact VP Membership Jessica Phillips (phcrecruitment@ucsd.edu) or Sabrina Fatholahi (phcnmoutreach@ucsd.edu) with any inquiries!</p>
+
+        <p class="question">How much of a time committment is being in a sorority?</p><br>
+        <p class="answer">Participating in a sorority is like participating in any co-curricular activity; it requires a time investment. Students in the Panhellenic Community at UCSD have the opportunity for a well-rounded college experience that involves academic work, campus and service involvement, networking, and social events. You choose your level of involvement, but what you get out of being in a sorority is what you put in.</p>
+
+        <p class="question">Are there academic requirements for joining a sorority?</p><br>
+        <p class="answer">In order to go through recruitment, you must be in good academic standing with the university. However, each Panhellenic sorority does choose its own individual scholarly requirements. Panhellenic sororities put a great amount of emphasis on scholarship in addition to other great things they have to offer.</p>
+
+        <p class="question">What are the financial requirements for joining a sorority?</p><br>
+        <p class="answer">Joining a sorority does entail a financial commitment, just like other extra-curricular activities. The financial requirements are called dues, and fluctuate in amount according to chapter. The average cost of dues for active chapter members is $330 per quarter, and the average one time fee for joining a chapter is $200. These dues typically cover chapter retreats, recruitment supplies, parent’s weekend events, chapter’s founders’ days, officer training, t-shirts, leadership institutes, formals, and philanthropy events.</p>
+
+        <p class="question">If I join a sorority, will I still be able to get involved with other organizations on campus?</p>
+        <p class="answer" style="margin-bottom:5%">Absolutely! Chapter members are active all over campus and it is actually highly encouraged that women participate in other organizations. Sisters introduce each other to new organizations on campus all the time, making it even easier to get involved. Chapters have the opportunity to meet and connect with various groups on campus- Multicultural Fraternities and Sororities, Fraternities, athletic clubs and sports teams, Associated Students, as well as various other student organizations. Being a member of the Greek community instantly connects you with numerous students on campus and allows for various ways to get plugged in to campus events.</p>
+    </div>
+</div>
+
 
 </div> <!-- CLOSING CONTAINER -->
 
