--- a/phil3.html
+++ b/phil3.html
@@ -46,9 +46,7 @@
                         <a class="dropdown-item" href="leadership.html">Leadership</a>
                       </div>
                     </li>
-                   <!--  <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About Us</a>
-                    </li> -->
+
                     <li class="nav-item">
                         <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
@@ -58,12 +56,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="leadership.html">Leadership</a>
-                    </li> -->
+
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
                     </li>
+                     <li class ="nav-item">
+                        <a class = "nav-link" href="FAQ.html">FAQ</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
@@ -77,7 +77,7 @@
   </div>
 
     <!-- Page Content -->
-      <p style="font-family:cursive;font-size:3.2vw;margin-top:2em;margin-bottom:2em"> <i>"The glory of life is to give, not to be given; to love, not to be loved; to serve, not to be served."</i><p> 
+      <p style="font-family:Petite Formal Cursive;font-size:3.2vw;margin-top:2em;margin-bottom:2em"> <i>"The glory of life is to give, not to be given; to love, not to be loved; to serve, not to be served."</i><p> 
 
 
 
@@ -257,7 +257,7 @@
       </div>
 
       <div class="col-sm-4 chapter">
-      Gamma Lambda Chapter 
+      Gamma Lambda Chapter <br><br>
       University of California, San Diego
       </div>
    </div>
