--- a/recruitment.html
+++ b/recruitment.html
@@ -34,7 +34,7 @@
             </button>
             <div class="navbar-collapse collapse" id="navbar10">
                 <ul class="navbar-nav nav-fill w-100">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -46,14 +46,8 @@
                         <a class="dropdown-item" href="leadership.html">Leadership</a>
                       </div>
                     </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Recruitment
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="FAQ.html">FAQ</a>
-                      </div>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="recruitment.html">Recruitment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="philanthropy.html">Philanthropy</a>
@@ -61,9 +55,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                    <li class ="nav-item">
+                      <a class = "nav-link" href="FAQ.html">FAQ</a>
                     </li>
                 </ul>
             </div>
@@ -77,9 +73,8 @@
   </div>
 
     <!-- Page Content -->
-      <p style="font-family:cursive;font-size:3.2vw;margin-top:2em;margin-bottom:2em;text-align:center"> <i>Find your friends for life</i><p> 
 
-
+<p style="color:grey;font-family:Quicksand;font-size:2.5em;margin-top:2em;margin-bottom:2em;text-align:center"> <i>Find your friends for life</i><p>
 
         <div class="row" style="margin-bottom:5%">
           <div class="col-lg-8">
@@ -116,13 +111,13 @@ href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./images/sisterhood/dd2.png" alt="Los Angeles" width="1100" height="500">
+                  <img src="./images/recruitment/formal1-1.png" alt="Los Angeles" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/dd2.png" alt="Chicago" width="1100" height="500">
+                  <img src="./images/recruitment/formal2-1.png" alt="Chicago" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/dd2.png" alt="New York" width="1100" height="500">
+                  <img src="./images/recruitment/formal3-1.png" alt="New York" width="1100" height="500">
                 </div>
               </div>
               <!-- Left and right controls -->
@@ -165,13 +160,13 @@ href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="./images/sisterhood/dd2.png" alt="Los Angeles" width="1100" height="500">
+                  <img src="./images/recruitment/cob1.png" alt="Los Angeles" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/dd2.png" alt="Chicago" width="1100" height="500">
+                  <img src="./images/recruitment/cob2.png" alt="Chicago" width="1100" height="500">
                 </div>
                 <div class="carousel-item">
-                  <img src="./images/sisterhood/dd2.png" alt="New York" width="1100" height="500">
+                  <img src="./images/recruitment/cob4.png" alt="New York" width="1100" height="500">
                 </div>
               </div>
 
@@ -219,13 +214,13 @@ href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./images/sisterhood/dd2.png" alt="Los Angeles" width="1100" height="500">
+                    <img src="./images/recruitment/new1.png" alt="Los Angeles" width="1100" height="500">
                   </div>
                   <div class="carousel-item">
-                    <img src="./images/sisterhood/dd2.png" alt="Chicago" width="1100" height="500">
+                    <img src="./images/recruitment/new2.png" alt="Chicago" width="1100" height="500">
                   </div>
                   <div class="carousel-item">
-                    <img src="./images/sisterhood/dd2.png" alt="New York" width="1100" height="500">
+                    <img src="./images/recruitment/new3.png" alt="New York" width="1100" height="500">
                   </div>
                 </div>
 
@@ -280,7 +275,7 @@ href="https://enroll.icsrecruiter.com/pan/UNCASD#/enroll/enrollment-disclaimer">
       </div>
 
       <div class="col-sm-4 chapter">
-      Gamma Lambda Chapter 
+      Gamma Lambda Chapter <br>
       University of California, San Diego
       </div>
    </div>
