--- a/sisterhood.html
+++ b/sisterhood.html
@@ -111,35 +111,42 @@
           <!-- sisterhood, delta dates, formals -->
        <!-- The slideshow -->
        <div class="col-md-6">
+            <div id="demo" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+              </ul>
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/sisterhood/reveal1.jpg" alt="Los Angeles" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/reveal2.jpeg" alt="Chicago" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/reveal3.jpg" alt="New York" width="1100" height="500">
+                </div>
+              </div>
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+            </div>
+<!--
         <div id="stage">
             <a class="mySlides" href="./images/sisterhood/reveal1.jpg" title="Winter '16"><img src="./images/sisterhood/reveal1.jpg" width="360" height="270"></a>
             <a class="mySlides" href="./images/sisterhood/reveal2.jpeg" title="Winter '16"><img src="./images/sisterhood/reveal2.jpeg" width="360" height="270"></a>
             <a class="mySlides" href="./images/sisterhood/reveal3.jpg" title="Winter '16"><img src="./images/sisterhood/reveal3.jpg" width="360" height="270"></a>
             <a class="mySlides" href="./images/sisterhood/reveal4.jpeg" title="Winter '16"><img src="./images/sisterhood/reveal4.jpeg" width="360" height="270"></a>
         </div>
-<!--
-        <div id="demo" class="carousel slide w3-mobile" data-ride="carousel">
-           The slideshow 
-          <div class="carousel-inner polaroid">
-            <div class="carousel-item active">
-              <p>Winter '16</p>
-              <img src="./images/sisterhood/reveal1.jpg" alt="Los Angeles" width="1100" height="500">
-            </div>
-            <div class="carousel-item">
-              <p>Winter '16</p>
-              <img src="./images/sisterhood/reveal2.jpeg" alt="Chicago" width="1100" height="500">
-            </div>
-            <div class="carousel-item">
-              <p>Winter '16</p>
-              <img src="./images/sisterhood/reveal3.jpg" alt="New York" width="1100" height="500">
-            </div>
-            <div class="carousel-item">
-              <p>Winter '16</p>
-              <img src="./images/sisterhood/reveal4.jpeg" alt="New York" width="1100" height="500">
-            </div>
-          </div>
-        </div>
 -->
+
       </div> <!--end col-md-7-->
     </div>
   </div>
@@ -159,31 +166,41 @@
    </div><!--end col-md-7-->
    <!-- The slideshow -->
    <div class="col-md-6">
+            <div id="demo" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+              </ul>
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/sisterhood/bb1.jpeg" alt="Los Angeles" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/bb2.jpg" alt="Chicago" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/bb4.jpg" alt="New York" width="1100" height="500">
+                </div>
+              </div>
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+            </div>
+<!--
         <div id="stage2">
             <a href="./images/sisterhood/bb1.jpeg" title="Coachella '17"><img src="./images/sisterhood/bb1.jpeg" width="360" height="270"></a>
             <a href="./images/sisterhood/bb2.jpg" title="Coachella '17"><img src="./images/sisterhood/bb2.jpg" width="360" height="270"></a>
             <a href="./images/sisterhood/bb4.jpg" title="Sun God '17"><img src="./images/sisterhood/bb4.jpg" width="360" height="270"></a>
         </div>
-<!--
-    <div id="demo" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner polaroid">
-        <div class="carousel-item active">
-          <p>Coachella '17</p>
-          <img src="./images/sisterhood/bb1.jpeg" alt="Los Angeles" width="1100" height="500">
-        </div>
-        <div class="carousel-item">
-          <p>Coachella '17</p>
-          <img src="./images/sisterhood/bb2.jpg" alt="Chicago" width="1100" height="500">
-        </div>
-        <div class="carousel-item">
-          <p>Sarah, Dec '02</p>
-          <img src="./images/sisterhood/bb4.jpg" alt="New York" width="1100" height="500">
-        </div>
-      </div>
-    </div>
-  </div>
 -->
-  <!--slideshow end-->
+
 </div><!--end row-->
 </div> <!--end container-->
       
@@ -198,38 +215,42 @@
       </div>
     </div>
     <div class="col-md-6">
+            <div id="demo" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+              </ul>
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/sisterhood/dd2.png" alt="Los Angeles" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/dd2.png" alt="Chicago" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/sisterhood/dd2.png" alt="New York" width="1100" height="500">
+                </div>
+              </div>
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+            </div>
+<!--
         <div id="stage3">
             <a class="mySlides" href="./images/sisterhood/dd1.jpeg" title="Sun God '17"><img src="./images/sisterhood/dd1.jpeg"></a>
             <a class="mySlides" href="./images/sisterhood/dd2.png" title="Sun God '17"><img src="./images/sisterhood/dd2.png"></a>
             <a class="mySlides" href="./images/sisterhood/dd3.jpg" title="Sun God '17"><img src="./images/sisterhood/dd3.jpg"></a>
             <a class="mySlides" href="./images/sisterhood/dd4.jpg" title="Sun God '17"><img src="./images/sisterhood/dd4.jpg"></a>
         </div>
-<!--
-      <div id="demo" class="carousel slide" data-ride="carousel">
-         The slideshow 
-        <div class="carousel-inner polaroid">
-          <div class="carousel-item active">
-            <p>Sun God '17</p>
-            <img src="./images/sisterhood/dd1.jpeg" alt="Los Angeles" width="1100" height="500">
-          </div>
-
-          <div class="carousel-item">
-            <p>Library Walk '18</p>
-            <img src="./images/sisterhood/dd2.png" alt="Chicago" width="1100" height="500">
-          </div>
-
-          <div class="carousel-item">
-            <p>Holy Matcha '17</p>
-            <img src="./images/sisterhood/dd3.jpg" alt="New York" width="1100" height="500">
-          </div>
-
-          <div class="carousel-item">
-            <p>Liberty Station '17</p>
-            <img src="./images/sisterhood/dd4.jpg" alt="New York" width="1100" height="500">
-          </div>
-        </div>
-      </div>
 -->
+
     </div>
   </div>
 </div>
