changes to footer for index and events

--- a/events.html
+++ b/events.html
@@ -57,6 +57,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="sisterhood.html">Sorority Life</a>
                     </li>
+                    <li class ="nav-item">
+                        <a class = "nav-link" href="FAQ.html">FAQ</a>
+                    </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="leadership.html">Leadership</a>
                     </li> -->
@@ -191,7 +194,7 @@
           </div>
         </div>
       </div> -->
-      Gamma Lambda Chapter 
+      Gamma Lambda Chapter <br>
       University of California, San Diego
     </div>
    </div>
