--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="events.html">Events</a>
                     </li>
+                    <li class ="nav-item">
+                        <a class = "nav-link" href="FAQ.html">FAQ</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -163,7 +166,7 @@
           </div>
         </div>
       </div> -->
-      Gamma Lambda Chapter 
+      Gamma Lambda Chapter <br>
       University of California, San Diego
     </div>
    </div>
